Create Intro Section.

--- a/css/style.less
+++ b/css/style.less
@@ -11,6 +11,10 @@ body{
     color: @black;
 }
 
+h1, h2, h3, h4, h5, h6{
+    margin: 0;
+}
+
 *,
 *:after,
 *:before{
@@ -23,3 +27,7 @@ body{
 @import "blocks/user.less";
 @import "blocks/nav.less";
 @import "blocks/intro.less";
+@import "blocks/social.less";
+@import "blocks/btn.less";
+@import "blocks/works.less";
+@import "blocks/portfolio.less";
