--- a/css/blocks/intro.less
+++ b/css/blocks/intro.less
@@ -1,1 +1,43 @@
 // main: ../style.less
+.intro{
+
+}
+
+.intro__inner{
+    display: flex;
+    padding-top: 100px;
+    padding-bottom: 120px;
+    position: relative;
+    background: url("../images/intro/symbols.png")right bottom no-repeat;
+    border-bottom: 1px solid fade(@grey, 30%);
+}
+
+.intro__content{
+    width: 50%;
+}
+
+.intro__suptitle{
+    font-size: 2.13rem;
+    font-weight: 200;
+    color: @black;
+}
+
+.intro__title{
+    margin-bottom: 5px;
+    font-size: 3rem;
+    color: @black;
+    font-weight: 700;
+}
+
+.intro__subtitle{
+    font-size: 1.2rem;
+    color: fade(@black, 70%);
+    margin-bottom: 25px;
+}
+
+.intro__photo{
+    position: absolute;
+    bottom: -1px;
+    right: 0;
+    z-index: 1;
+}
