Create Portfolio-Works Section

--- a/css/blocks/btn.less
+++ b/css/blocks/btn.less
@@ -3,11 +3,11 @@
 .btn{
     display: inline-block;
     vertical-align: top;
-    padding: 1.1rem 1.8rem;
+    padding: 1.05em 1.7em;
     min-width: 170px;
 
     border: 1px solid @grey;
-    border-radius: 30px;
+    border-radius: 1.8em;
     background: none;
     cursor: pointer;
 
@@ -30,5 +30,13 @@
     }
     + .btn{
         margin-left: 1rem;
+    }
+
+    /*MOD*/
+    &--sm{
+        padding: .7em 1.1em;
+        font-size: .94rem;
+        font-weight: 700;
+        border-width: 2px;
     }
 }
