--- a/css/blocks/portfolio.less
+++ b/css/blocks/portfolio.less
@@ -1,2 +1,49 @@
 // main: ../style.less
 
+.portfolio{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -1rem 2.8rem;
+}
+
+.portfolio__col{
+    flex-basis: 33.333%;
+    padding: 1rem;
+}
+
+.portfolio__item{
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 0 4px fade(#000, 25%);
+    transition: box-shadow .2s linear;
+
+    &:hover{
+        box-shadow: 0 0 25px fade(#000, 25%);
+    }
+}
+
+.portfolio__item-image{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.portfolio__item-content{
+    padding: 1rem 0.8rem ;
+}
+
+.portfolio__item-cat{
+    margin-bottom: .5rem;
+    font-size: .8rem;
+    color: @black;
+    text-transform: uppercase;
+}
+
+.portfolio__item-title{
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.06rem;
+    color: @black;
+    text-transform: uppercase;
+    font-weight: 700;
+}
