--- a/css/style.less
+++ b/css/style.less
@@ -31,3 +31,6 @@ h1, h2, h3, h4, h5, h6{
 @import "blocks/btn.less";
 @import "blocks/works.less";
 @import "blocks/portfolio.less";
+
+/* Helpers */
+@import "helpers.less";
