--- a/css/style.less
+++ b/css/style.less
@@ -31,6 +31,7 @@ h1, h2, h3, h4, h5, h6{
 @import "blocks/btn.less";
 @import "blocks/works.less";
 @import "blocks/portfolio.less";
+@import "blocks/about.less";
 
 /* Helpers */
 @import "helpers.less";
