--- a/css/style.less
+++ b/css/style.less
@@ -6,9 +6,14 @@ html{
 }
 
 body{
+    margin: 0;
     font-family: 'Montserrat', sans-serif;
     font-size: 1 rem;
     color: @black;
+}
+
+p{
+    margin: 0 0 1rem;
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -32,6 +37,7 @@ h1, h2, h3, h4, h5, h6{
 @import "blocks/works.less";
 @import "blocks/portfolio.less";
 @import "blocks/about.less";
+@import "blocks/reviews.less";
 
 /* Helpers */
 @import "helpers.less";
