Create News Section

--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -41,6 +41,7 @@
     font-size: 3rem;
     color: @black;
     font-weight: 700;
+    text-transform: uppercase;
 }
 
 .about__bigtitle{
@@ -51,6 +52,7 @@
     color: fade(@black, 15%);
     font-weight: 700;
     line-height: 1.1;
+    text-transform: uppercase;
 }
 
 .about__text{
