--- a/css/style.less
+++ b/css/style.less
@@ -27,17 +27,19 @@ h1, h2, h3, h4, h5, h6{
 }
 
 /* Block */
-@import "blocks/container.less";
-@import "blocks/header.less";
-@import "blocks/user.less";
-@import "blocks/nav.less";
-@import "blocks/intro.less";
-@import "blocks/social.less";
-@import "blocks/btn.less";
-@import "blocks/works.less";
-@import "blocks/portfolio.less";
-@import "blocks/about.less";
-@import "blocks/reviews.less";
+@import "blocks/container";
+@import "blocks/header";
+@import "blocks/user";
+@import "blocks/nav";
+@import "blocks/intro";
+@import "blocks/social";
+@import "blocks/btn";
+@import "blocks/works";
+@import "blocks/portfolio";
+@import "blocks/about";
+@import "blocks/reviews";
+@import "blocks/news";
+@import "blocks/articles";
 
 /* Helpers */
-@import "helpers.less";
+@import "helpers";
