--- a/css/blocks/btn.less
+++ b/css/blocks/btn.less
@@ -19,11 +19,12 @@
     text-decoration: none;
     text-align: center;
 
-    transition: background-color .2s linear, color .2s linear, box-shadow .2s linear;
+    transition: background-color .2s linear, color .2s linear, box-shadow .2s linear, border-color .2s linear;
     &:focus{
         outline: none;
     }
     &:hover{
+        border-color: @black;
         background-color: @black;
         color: @white;
         box-shadow: 2px 2px 10px fade(#000, 24%);
