Create Modal Work

--- a/css/style.less
+++ b/css/style.less
@@ -10,6 +10,10 @@ body{
     font-family: 'Montserrat', sans-serif;
     font-size: 1 rem;
     color: @black;
+
+    &.no-scroll{
+        overflow: hidden;
+    }
 }
 
 p{
@@ -41,6 +45,8 @@ h1, h2, h3, h4, h5, h6{
 @import "blocks/news";
 @import "blocks/articles";
 @import "blocks/footer";
+@import "blocks/modal";
+@import "blocks/modal-work";
 
 /* Helpers */
 @import "helpers";
