--- a/css/blocks/modal.less
+++ b/css/blocks/modal.less
@@ -40,3 +40,16 @@
         transform: rotate(90deg);
     }
 }
+
+.modal__content{
+    padding: 5rem 1rem;
+}
+
+.modal__title{
+    margin-bottom: 3.6rem;
+    font-size: 3rem;
+    text-transform: uppercase;
+    color: @black;
+    font-weight: 700;
+    text-align: center;
+}
