--- a/css/style.less
+++ b/css/style.less
@@ -47,6 +47,8 @@ h1, h2, h3, h4, h5, h6{
 @import "blocks/footer";
 @import "blocks/modal";
 @import "blocks/modal-work";
+@import "blocks/timeline";
+@import "blocks/progress-bar";
 
 /* Helpers */
 @import "helpers";
