--- a/css/blocks/modal.less
+++ b/css/blocks/modal.less
@@ -20,6 +20,10 @@
     background-color: #fff;
 
     position: relative;
+
+    &--sm{
+        max-width: 900px;
+    }
 }
 
 .modal__close{
@@ -51,5 +55,10 @@
     text-transform: uppercase;
     color: @black;
     font-weight: 700;
-    text-align: center;
+}
+
+.modal__subtitle{
+    text-transform: uppercase;
+    font-size: 1.06rem;
+    color: @black;
 }
