--- a/css/blocks/modal.less
+++ b/css/blocks/modal.less
@@ -1,7 +1,7 @@
 // main: ../style.less
 
 .modal{
-    display: flex;
+    display: none;
     overflow: auto;
     width: 100%;
     height: 100%;
@@ -11,6 +11,10 @@
     left: 0;
     z-index: 1000;
     background: fade(@black, 90%);
+
+    &.show{
+        display: flex;
+    }
 }
 
 .modal__dialog{
@@ -20,6 +24,8 @@
     background-color: #fff;
 
     position: relative;
+    transform: scale(0);
+    transition: transform .2s linear;
 
     &--sm{
         max-width: 900px;
