--- a/css/style.less
+++ b/css/style.less
@@ -30,6 +30,9 @@ h1, h2, h3, h4, h5, h6{
     box-sizing: border-box;
 }
 
+/* Vendor */
+@import "vendor/slick";
+
 /* Block */
 @import "blocks/container";
 @import "blocks/header";
