--- a/css/blocks/footer.less
+++ b/css/blocks/footer.less
@@ -22,8 +22,35 @@
     text-decoration: none;
     transition: color .2s linear;
 
-    &:hover{
-        color: @white;
+    &-V{
+        &:hover{
+            color: #0077ff;
+        }
+    }
+    &-F{
+        &:hover{
+            color: #1877f2;
+        }
+    }
+    &-TW{
+        &:hover{
+            color: #1da1f2;
+        }
+    }
+    &-I{
+        &:hover{
+            color: #912cb3;
+        }
+    }
+    &-Y{
+        &:hover{
+            color: #ff0000;
+        }
+    }
+    &-TL{
+        &:hover{
+            color: #2fa0d1;
+        }
     }
 }
 
