--- a/css/blocks/news.less
+++ b/css/blocks/news.less
@@ -2,7 +2,7 @@
 
 .news{
     margin-top: 14rem;
-    margin-bottom: 1rem;
+    margin-bottom: 5rem;
 }
 
 .news__header{
@@ -25,15 +25,20 @@
 }
 
 .news__footer{
-    text-align: right;
+    margin-top: 5rem;
+    text-align: center;
 }
 
 .news__link{
-    font-size: .94rem;
-    color: @grey;
-    text-decoration: underline;
-
+    font-family: inherit;
+    font-weight: 700;
+    line-height: 1.1;
+    font-size: 1.06rem;
+    color: @black;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
     &:hover{
-        text-decoration: none;
+        text-decoration: underline;
     }
 }
