--- a/css/style.less
+++ b/css/style.less
@@ -57,6 +57,7 @@ h1, h2, h3, h4, h5, h6{
 @import "blocks/input";
 @import "blocks/form";
 @import "blocks/textarea";
+@import "blocks/burger";
 
 /* Helpers */
 @import "helpers";
