--- a/css/blocks/nav.less
+++ b/css/blocks/nav.less
@@ -4,6 +4,10 @@
     display: flex;
     align-items: center;
     height: 100%;
+
+    @media @tablet {
+        display: none;
+    }
 }
 
 .nav__link{
