--- a/css/vars.less
+++ b/css/vars.less
@@ -5,4 +5,5 @@
 @grey-light: #8D8D8E;
 @white: #ffffff;
 
-@tablet: ~"(max-width: 767px)";
+@mobile: ~"(max-width: 767px)";
+@tablet: ~"(max-width: 991px)";
