--- a/css/blocks/btn.less
+++ b/css/blocks/btn.less
@@ -46,4 +46,10 @@
         min-width: 145px;
         font-size: .8rem;
     }
+
+    @media @tablet{
+        font-size: 1rem;
+        padding: 1em 1.5em;
+        min-width: 140px;
+    }
 }
