--- a/css/blocks/intro.less
+++ b/css/blocks/intro.less
@@ -1,11 +1,18 @@
 // main: ../style.less
 .intro__inner{
     display: flex;
-    padding-top: 100px;
-    padding-bottom: 120px;
+    padding-top: 6.6rem;
+    padding-bottom: 8rem;
     position: relative;
     background: url("../images/intro/symbols.png")right bottom no-repeat;
     border-bottom: 1px solid fade(@grey, 30%);
+
+    @media @tablet {
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+
+        background-size: 400px auto;
+    }
 }
 
 .intro__content{
@@ -16,6 +23,10 @@
     font-size: 2.13rem;
     font-weight: 200;
     color: @black;
+
+    @media @tablet{
+        font-size: 1.5rem;
+    }
 }
 
 .intro__title{
@@ -23,6 +34,10 @@
     font-size: 3rem;
     color: @black;
     font-weight: 700;
+
+    @media @tablet{
+        font-size: 2rem;
+    }
 }
 
 .intro__subtitle{
@@ -36,4 +51,8 @@
     bottom: -1px;
     right: 0;
     z-index: 1;
+
+    @media @tablet {
+        width: 350px;
+    }
 }
