--- a/css/blocks/portfolio.less
+++ b/css/blocks/portfolio.less
@@ -9,6 +9,14 @@
 .portfolio__col{
     flex-basis: 33.333%;
     padding: 1rem;
+
+    @media @mobile {
+        flex-basis: 50%;
+    }
+
+    @media @mobile-sm {
+        flex-basis: 100%;
+    }
 }
 
 .portfolio__item{
