--- a/css/vars.less
+++ b/css/vars.less
@@ -5,5 +5,7 @@
 @grey-light: #8D8D8E;
 @white: #ffffff;
 
+@mobile-sm: ~"(max-width: 565px)";
 @mobile: ~"(max-width: 767px)";
 @tablet: ~"(max-width: 991px)";
+@notebook: ~"(max-width: 1199px)";
