--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -7,26 +7,37 @@
 .about__inner{
     display: flex;
     max-width: 1090px;
+    flex-wrap: wrap;
 }
 
 .about__photo,
 .about__content{
     width: 50%;
+
+    @media @tablet{
+        width: 100%;
+    }
 }
 
 .about__content{
     padding-left: 3.2rem;
     margin-top: 2rem;
+    @media @tablet{
+        order: 1;
+        margin-bottom: 2rem;
+    }
 }
 
 .about__photo{
     position: relative;
     img{
-        position: relative;
+        position: absolute;
+        bottom: 0;
         z-index: 2;
     }
     &:before{
         content: "";
+        display: block;
         width: 413px;
         height: 413px;
         background-color: #efefef;
@@ -35,6 +46,20 @@
         bottom: 0;
         z-index: 1;
     }
+
+    @media @tablet{
+        order: 2;
+        &:before{
+            width: 100%;
+            height: 300px;
+
+            left: 0;
+        }
+
+        img{
+            position: relative;
+        }
+    }
 }
 
 .about__title{
@@ -42,6 +67,9 @@
     color: @black;
     font-weight: 700;
     text-transform: uppercase;
+    @media @notebook{
+        font-size: 2.5rem;
+    }
 }
 
 .about__bigtitle{
@@ -53,6 +81,10 @@
     font-weight: 700;
     line-height: 1.1;
     text-transform: uppercase;
+
+    @media @notebook{
+        font-size: 4rem;
+    }
 }
 
 .about__text{
