--- a/css/blocks/intro.less
+++ b/css/blocks/intro.less
@@ -13,10 +13,18 @@
 
         background-size: 400px auto;
     }
+
+    @media @mobile{
+        background-size: 300px auto;
+    }
 }
 
 .intro__content{
     width: 50%;
+
+    @media @mobile{
+        width: 60%;
+    }
 
     @media @mobile-sm {
         width: 100%;
@@ -58,6 +66,10 @@
 
     @media @tablet {
         width: 350px;
+    }
+
+    @media @mobile{
+        width: 300px;
     }
 
     @media @mobile-sm {
