--- a/css/blocks/articles.less
+++ b/css/blocks/articles.less
@@ -6,9 +6,22 @@
     margin: 0 -1rem;
 }
 
+.articles__item{
+    margin-bottom: 2rem;
+
+    @media @mobile{
+        max-width: 370px;
+        margin: 0 auto 2rem;
+    }
+}
+
 .articles__col{
     width: 33.3333%;
     padding: 0 1rem;
+
+    @media @mobile{
+        width: 100%;
+    }
 }
 
 .articles__header{
