--- a/css/blocks/btn.less
+++ b/css/blocks/btn.less
@@ -52,4 +52,14 @@
         padding: 1em 1.5em;
         min-width: 140px;
     }
+
+    @media @mobile-sm{
+        display: block;
+        width: 100%;
+
+        + .btn{
+            margin-left: 0;
+            margin-top: 1rem;
+        }
+    }
 }
