--- a/css/blocks/footer.less
+++ b/css/blocks/footer.less
@@ -8,11 +8,22 @@
 .footer__credits{
     display: flex;
     align-items: center;
+
+    @media @tablet{
+        width: 100%;
+        justify-content: center;
+        margin-bottom: 1rem;
+    }
+
+    @media @mobile-sm {
+        flex-direction: column;
+    }
 }
 
 .footer__inner{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .footer__social-link{
@@ -52,6 +63,12 @@
             color: #2fa0d1;
         }
     }
+
+    a{
+        @media @tablet{
+            margin: 0 .5rem;
+        }
+    }
 }
 
 .footer__copyright{
@@ -60,12 +77,24 @@
     color: #BBBBCC;
     font-size: .94rem;
     border-right: 1px solid fade(@grey, 35%);
+
+    @media @mobile-sm {
+        margin-right: 0;
+        margin-bottom: 1rem;
+        border-right: 0;
+    }
 }
 
 .footer__nav{
     display: flex;
     align-items: center;
     font-size: .94rem;
+
+    @media @tablet{
+        width: 100%;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
 }
 
 .footer__nav-link{
@@ -91,5 +120,9 @@
             border-color: @white;
             color: @black;
         }
+    }
+
+    @media @tablet{
+        margin: 0 .5rem .5rem;
     }
 }
