--- a/css/blocks/portfolio.less
+++ b/css/blocks/portfolio.less
@@ -28,6 +28,10 @@
     &:hover{
         box-shadow: 0 0 25px fade(#000, 25%);
     }
+
+    iframe{
+        width: 100%;
+    }
 }
 
 .portfolio__item-image{
