--- a/css/blocks/burger.less
+++ b/css/blocks/burger.less
@@ -3,6 +3,9 @@
     width: 30px;
     height: 30px;
     display: none;
+    padding: 0;
+    border: 0;
+    background: none;
 
     @media @mobile {
         display: block;
