--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -2,6 +2,17 @@
 
 .header{
     padding: 1.2rem 0;
+    position: relative;
+
+    @media @mobile{
+        position: fixed;
+        background-color: @white;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1000;
+        box-shadow: 0 5px 10px rgba(0,0,0,.3);
+    }
 }
 
 .header__inner{
