--- a/css/blocks/nav.less
+++ b/css/blocks/nav.less
@@ -2,11 +2,28 @@
 
 .nav{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     height: 100%;
 
     @media @mobile {
+        width: 100%;
+        height: auto;
+        padding: 1rem;
+        background-color: @white;
+        text-align: center;
+        position: absolute;
+        top: 100%;
+        right: 0;
+        z-index: 1000;
+        box-shadow: 0 5px 10px rgba(0,0,0,.3);
+
         display: none;
+
+        &.show{
+            display: flex;
+
+        }
     }
 }
 
@@ -51,5 +68,11 @@
             background-color: @black;
             color: @white;
         }
+    }
+
+    @media @mobile{
+        width: 100%;
+        margin-left: 0;
+        padding: .5rem 1rem;
     }
 }
