--- a/css/blocks/portfolio.less
+++ b/css/blocks/portfolio.less
@@ -4,6 +4,14 @@
     display: flex;
     flex-wrap: wrap;
     margin: 0 -1rem 2.8rem;
+
+    @media @mobile{
+        max-width: 370px;
+    }
+
+    @media @mobile-sm{
+        margin: 0 auto;
+    }
 }
 
 .portfolio__col{
