--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -20,3 +20,10 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.user__avatar{
+    img{
+        width: 57px;
+        height: 57px;
+    }
+}
