--- a/css/blocks/contact.less
+++ b/css/blocks/contact.less
@@ -12,7 +12,8 @@
 .contact__right{
     width: 53%;
 
-    background: @black url(https://placehold.it/600x1000/333) center no-repeat;
+    background: @black url(https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80) center no-repeat;
+    background-size: cover;
 }
 
 .contact__info{
