--- a/css/blocks/contact.less
+++ b/css/blocks/contact.less
@@ -7,6 +7,9 @@
 .contact__left{
     width: 47%;
     padding: 2rem;
+    @media @tablet {
+        width: 100%;
+    }
 }
 
 .contact__right{
@@ -14,6 +17,9 @@
 
     background: @black url(https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80) center no-repeat;
     background-size: cover;
+    @media @tablet {
+        display: none;
+    }
 }
 
 .contact__info{
