--- a/css/blocks/progress-bar.less
+++ b/css/blocks/progress-bar.less
@@ -28,6 +28,9 @@
     width: 139px;
     height: 6px;
     background-color: #efefef;
+    @media @mobile-sm {
+        width: 80px;
+    }
 }
 
 .progress-bar__progress{
