--- a/css/style.less
+++ b/css/style.less
@@ -1,6 +1,21 @@
 // compress: true
 @import "vars";
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: @black;
+    border-radius: 8px;
+    border: 3px solid @black;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: 0 0 0.2px rgb(0 0 0 / 20%) inset;
+    background: @white;
+}
+
 html{
     font-size: 15px;
 }
